# bountyflow

./: .gitignore  AGENTS.md  AUTONOMY.md  Anchor.toml  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md  deploy.sh  package.json
bot/: package.json  tsconfig.json
bot/src/: commands.ts  index.ts  solana.ts  tokens.ts
program/: Anchor.toml  Cargo.toml
program/src/: agent.rs  bounty.rs  claim.rs  error.rs  escrow.rs  lib.rs  state.rs
sdk/: package.json  tsconfig.json
sdk/src/: index.ts
skills/: SKILL.md
web/: package.json
